# metal-cpp-tutorials

./: .gitignore  CMakeLists.txt  README.md  index.html  robots.txt  sitemap.xml
.github/workflows/: pages.yml  request-pages.yml
assets/meshes/: README.md  cornell_box.stl
assets/textures/: README.md  checker.ppm  checker.texture  clay.ppm  cornell_debug.ppm  cornell_debug.texture  cornell_palette.ppm  warm_metal.ppm
books/: MetalCppInOneWeekend.html  MetalCppTheNextWeek.html  MetalCppTheRestOfYourLife.html
images/diagrams/: README.md  gpt-image-prompts.md
src/MetalCppInOneWeekend/: Shaders.metal  main.cpp
src/MetalCppRenderingEngine/: Shaders.metal  main.cpp
src/MetalCppTinyRenderer/: Renderer.cpp  Shaders.metal  main.cpp
style/: book.css  site.css  syntax-highlight.js
